# DTU_ROBOT

./: README.md
DTIColorCalibration/: DTIColorCalibration.pro
DTIColorCalibration/src/: MacBethColorCalibrate.cpp  MacBethColorCalibrate.h  MacBethDetector.cpp  MacBethDetector.h  macbethcolorcalibrate.cpp  macbethcolorcalibrate.h  macbethdetector.cpp  macbethdetector.h  main.cpp
Installer/: Installer.isl  Installer.isproj
cal_ti/: CMakeLists.txt  cal_ti.pro  package.xml
cal_ti/ext/levmar-2.6/: levmar.pro
cal_ti/include/cal_ti/: CalibThread.hpp  Calibration.hpp  HandEyeCalibration.hpp  ImgAnnotation.hpp  MonoCalibration.hpp  SharedData.hpp  config.hpp  main_window.hpp  qnode.hpp  ui_AnnotateDialog.hpp
cal_ti/launch/: CalTI.launch
cal_ti/src/: main.cpp  qnode.cpp
cal_ti/src/calibration/: CalibThread.cpp  Calibration.cpp  HandEyeCalibration.cpp  MonoCalibration.cpp  StereoCalibration.cpp  dornaika.cpp  rot.cpp  tiv_test.cpp  tiv_types.cpp
cal_ti/src/gui/: ImgAnnotation.cpp  main_window.cpp
dtu_reconstruction/: dtu_reconstruction.pro
dtu_reconstruction/scripts/: make_dataset.sh  reconstruct_stl.sh  triangulate_models.sh  triangulate_scenes_kinect.sh  triangulate_scenes_stl.sh
dtu_reconstruction/src/: Algorithm.h  AlgorithmGrayCode.cpp  AlgorithmGrayCode.h  AlgorithmLineShift.cpp  AlgorithmLineShift.h  MacBethColorCalibrate.cpp  MacBethColorCalibrate.h  MacBethDetector.cpp  MacBethDetector.h  SMCalibrationParameters.cpp  SMCalibrationParameters.h  SMCalibrationParams.cpp  SMCalibrationWorker.cpp  SMCalibrationWorker.h  SMColorCalibrationParameters.cpp  SMColorCalibrationParameters.h  SMColorCalibrationWorker.cpp  SMColorCalibrationWorker.h  SMTypes.h  cvtools.cpp  cvtools.h  ids.h  macros.cpp  main.cpp  normal_correction_manifold.h  normal_correction_manifold_impl.hpp  scenedata.cpp  scenedata.h  simple_color_balance.cpp  stereo_match.cpp  stereo_match.h  traits.h  viewdata.cpp  viewdata.h  white_balance.hpp
feature_matching_benchmark/: .gitignore  CMakeLists.txt  README.md  benchmark_all.sh  benchmark_all_fusion.sh  benchmark_all_pca.sh  benchmark_bologna1_noise0.1.sh  benchmark_bologna1_noise0.3.sh  benchmark_bologna1_timing.sh  benchmark_bologna2.sh  benchmark_bologna2_fusion.sh  benchmark_bologna2_pca.sh  benchmark_queens.sh  benchmark_rgbd_scenes.sh  benchmark_rgbd_scenes_0.125.sh  benchmark_uwa.sh  camera_parameters.cam  feature_matching_dataset.cpp  feature_matching_features.cpp  feature_matching_features.h  feature_matching_metrics.h  feature_matching_recognition.cpp  feature_matching_timing.cpp  feature_matching_tools.cpp  feature_matching_tools.h  process_output.m  process_timings.m  recognition_bologna.sh  recognition_queens.sh  recognition_queens_fusion.sh  recognition_rgbd.sh  recognition_rgbd_fusion.sh  recognition_uwa.sh  recognition_uwa_fusion.sh  setup.m
feature_matching_benchmark/cmake/: FindHalcon.cmake
feature_matching_benchmark/halcon/: Create3DObjectModel.h  ModelDetectionParameters.hpp  ObjectModel3DSegmentation.h  SurfaceModelCreator.cpp  SurfaceModelCreator.h  SurfaceModelDetector.cpp  halconestimation.cpp  halconestimation.h
feature_matching_benchmark/include/: rops_estimation_fix.h  shot_lrf_mod.h  shot_lrf_mod.h~
feature_matching_benchmark/misc/: bologna_format_inifiles.m  decimate_0.125.mlx  decimate_0.25.mlx  decimate_0.5.mlx  decimate_ply_meshlabserver.sh  delaunay.cpp  depth2pc.m  format_ply_meshlabserver.sh  noisify.cpp  pointcloud2mesh.m  queens_pts_ops_2_pcd_ply.m  read_pts_ops.m  rgbd_depth2pc.m  write_pcd.m  write_ply.m
generate_gt/: generate_gt.pro  main.cpp
manual_registration/: .gitignore  CMakeLists.txt  manual_registration.cpp  manual_registration.h  manual_registration.ui
manual_registration_win/: manual_registration_win.pro  manual_registration_win.sln  manual_registration_win.vcxproj  manual_registration_win.vcxproj.filters
manual_registration_win/data/: Scene1_model1_pose.txt  model1.ply  model2.ply  scene1.pcd
manual_registration_win/src/: manual_registration.cpp  manual_registration.h  manual_registration.ui
manual_registration_win/x64/Release/: Scene1_model1_pose.txt  local_cloud_aligned_.pcd  trfm.txt
move_object_frame_ply/: CMakeLists.txt  move_object_frame.cpp
move_object_frame_ply/.kdev4/: move_object_frame_ply.kdev4
pose_estimation_app/: pose_estimation_app.pro
pose_estimation_app/data/: model1.vtk  scene1.pcd
pose_estimation_app/output/bologna2/: detection_output_shot.txt  detection_output_usc.txt  meta_detection_timings_ecsad.txt  meta_detection_timings_fpfh.txt  meta_detection_timings_ndhist.txt  meta_detection_timings_rops.txt  meta_detection_timings_shot.txt  meta_detection_timings_si.txt  meta_detection_timings_usc.txt
pose_estimation_app/scripts/: benchmark_bologna2.sh  benchmark_bologna2.sh~
pose_estimation_app/src/: FeatureEstimator.cpp  FeatureEstimator.h  covis_config.h  feature_matching_features.cpp  feature_matching_features.h  feature_matching_metrics.cpp  feature_matching_recognition.cpp  feature_matching_tools.cpp  main.cpp  main_1.cpp
pose_estimation_app/src/core/: converters.h  converters_impl.hpp  core.h  correspondence.cpp  correspondence.h  covis_base.h  detection.cpp  detection.h  dist.h  ids.h  io.h  io_impl.hpp  macros.cpp  macros.h  progress_display.h  random.cpp  random.h  random_impl.hpp  range.cpp  range.h  stat.cpp  stat.h  stat_impl.hpp  transform.h
pose_estimation_app/src/detect/: CMakeLists.txt  correspondence_filter_base.h  correspondence_filter_distance.cpp  correspondence_filter_distance.h  correspondence_filter_ratio.cpp  correspondence_filter_ratio.h  correspondence_filter_transform.h  correspondence_filter_transform_impl.hpp  correspondence_voting.h  correspondence_voting_impl.hpp  detect.h  detect_base.h  feature_search.h  feature_search_impl.hpp  fit_evaluation.h  fit_evaluation_impl.hpp  halconestimation.h  point_search.h  point_search_impl.hpp  pose_sampler.h  ransac.h  ransac_impl.hpp  search_base.h  search_base_impl.hpp
pose_estimation_app/src/halcon/: Create3DObjectModel.cpp  ModelCreationParameters.hpp  ModelDetectors.hpp  (+1 more)
(+17 files in other folders)
